# cmakedemo

./: README.md
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  TutorialConfig.h.in
Step2/MathFunctions/: mysqrt.cxx
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
Step4/MathFunctions/: CMakeLists.txt
Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step6/MathFunctions/: CMakeLists.txt
Step7/: CMakeLists.txt
Step7/MathFunctions/: mysqrt.cxx
Step8/: CMakeLists.txt
Step9/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx  mysqrt.h
Test/TestConfigurefile/: CMakeLists.txt  config.h.in
